Fixed nav display on small windows.

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -196,7 +196,7 @@ header {
     float: right;
     width: auto;
     margin-top: 8px;
-    margin-left: 300px;
+    margin-left: 5%;
     margin-right: 10px;
     overflow: hidden;
     z-index: 3;
